--- a/static_devconnect/pages/index.html
+++ b/static_devconnect/pages/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="Aléxia e Eduardo">
+    <meta name="author" content="Nathalia">
     <meta name="description" content="Site da empresa DevConnect">
 
     <title>Tela Login - DevConnect</title>
@@ -34,7 +34,7 @@
                     <input type="password" name="" id="">
                 </div>
 
-                <button type="submit">Entrar</button>
+                <button type="submit" class="formulario-botao-roxa">Entrar</button>
 
                 <p>ou</p>
 
